@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 9;    # last test to print
+use Test::More tests => 10;    # last test to print
 
 use XML::LibXML;
 use WWW::Ohloh::API::Repository;
@@ -20,14 +20,13 @@ my %method = (
     id               => '19724',
     type             => 'GitRepository',
     url              => 'http://babyl.dyndns.org/git/www-ohloh-api.git',
-    username         => '',
-    password         => '',
+    username         => 'bob',
+    password         => 'frob',
     logged_at        => '2008-02-04T17:31:43Z',
     commits          => 8,
     ohloh_job_status => 'success',
 );
 
-for my $m ( keys %method ) {
-    is $rep->$m => $method{$m}, "$m()";
-}
+is $rep->$_ => $method{$_}, "$_()" for keys %method;
 
+isa_ok $rep->url, 'URI', 'url isa URI';
